--- a/app/src/main/res/layout/login_form.xml
+++ b/app/src/main/res/layout/login_form.xml
@@ -6,8 +6,8 @@
     android:layout_height="match_parent">
 
     <LinearLayout
-        android:layout_width="409dp"
-        android:layout_height="729dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         tools:layout_editor_absoluteX="1dp"
         tools:layout_editor_absoluteY="1dp">
@@ -54,7 +54,6 @@
                 android:ems="10"
                 android:hint="Username"
                 android:inputType="text"
-                android:paddingLeft="20sp"
                 android:paddingRight="20sp" />
         </LinearLayout>
 
