--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,23 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/drawerLayout"
     tools:context=".MainActivity">
 
-    <LinearLayout
-        android:layout_width="409dp"
-        android:layout_height="729dp"
-        android:orientation="vertical"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="1dp">
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+        <LinearLayout
+            android:id="@+id/layoutToolBar"
+            android:layout_width="match_parent"
+            android:layout_height="?actionBarSize"
+            android:orientation="vertical"
+            tools:layout_editor_absoluteX="1dp"
+            tools:layout_editor_absoluteY="1dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="180dp"
             android:background="#20649F"
-            android:backgroundTint="#2C9ED6"
+            android:backgroundTint="#73B3F3"
             android:orientation="vertical">
 
             <LinearLayout
@@ -26,14 +31,13 @@
                 android:gravity="center"
                 android:orientation="horizontal">
 
-                <ImageButton
-                    android:id="@+id/imageButton9"
+                <ImageView
+                    android:id="@+id/imageMenu"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
                     android:background="@android:color/transparent"
-                    app:srcCompat="@drawable/menufix" />
-
+                    app:srcCompat="@drawable/menu" />
                 <TextView
                     android:id="@+id/textView5"
                     android:layout_width="187dp"
@@ -45,18 +49,23 @@
 
                 <ImageButton
                     android:id="@+id/imageButton10"
-                    android:layout_width="67dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="20dp"
+                    android:layout_marginRight="15dp"
                     android:background="@android:color/transparent"
-                    app:srcCompat="@drawable/searchfix" />
+                    app:srcCompat="@drawable/search" />
             </LinearLayout>
 
+
             <com.google.android.material.tabs.TabLayout
+                android:id="@+id/tabLayout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:tabTextColor="@color/white"
-                android:background="#2C9ED6">
+                android:background="#73B3F3"
+                app:tabIndicatorColor="@color/white"
+                app:tabSelectedTextColor="@color/tab_selected_text_color"
+                app:tabTextAppearance="@style/CustomTabText"
+                app:tabTextColor="@color/tab_unselected_text_color">
 
                 <com.google.android.material.tabs.TabItem
                     android:layout_width="wrap_content"
@@ -75,13 +84,34 @@
                     android:layout_height="wrap_content"
                     android:text="THỂ LOẠI" />
             </com.google.android.material.tabs.TabLayout>
-
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/textView6"
+<!--            <fragment-->
+<!--                android:id="@+id/navHostFragment"-->
+<!--                android:name="androidx.navigation.fragment.NavHostFragment"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="557dp"-->
+<!--                app:defaultNavHost="true"-->
+<!--                app:layout_constraintBottom_toBottomOf="parent"-->
+<!--                app:layout_constraintTop_toBottomOf="@+id/layoutToolBar"-->
+<!--                app:navGraph="@navigation/main"-->
+<!--                />-->
+        <androidx.viewpager.widget.ViewPager
+            android:id="@+id/viewpager"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="SÁCH" />
+            android:layout_height="match_parent" />
     </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+    />
+
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/navigateView"
+        android:layout_width="wrap_content"
+        android:layout_height="900dp"
+        android:layout_gravity="start"
+        app:menu="@menu/navigation_menu"
+        app:itemIconSize="35dp"
+        app:itemIconPadding="20dp"
+        app:headerLayout="@layout/layout_navigate_header"
+        app:itemTextAppearance="@style/MenuTextAppearance"
+        />
+</androidx.drawerlayout.widget.DrawerLayout>
