--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,9 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="tab_selected_text_color">#FFFFFF</color> <!-- Màu khi tab được chọn -->
+    <color name="tab_unselected_text_color">#90A4AE</color> <!-- Màu khi tab không được chọn -->
+    <color name="tab_selected_background">#FFFFFFFF</color> <!-- Màu nền mặc định của Tab -->
+    <color name="tab_unselected_background">#FBFBFB</color>
+
 </resources>
