--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -11,4 +11,7 @@
         <item name="android:layout_marginTop">25dp</item> <!-- Adjust top padding -->
         <item name="android:paddingBottom">25dp</item>
     </style>
+    <style name="BorderButton" >
+
+    </style>
 </resources>
