--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,14 +2,15 @@
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/drawerLayout"
     tools:context=".MainActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" />
+
     <LinearLayout
         android:id="@+id/layoutToolBar"
         android:layout_width="match_parent"
@@ -38,6 +39,7 @@
                     android:layout_marginLeft="20dp"
                     android:background="@android:color/transparent"
                     app:srcCompat="@drawable/menu" />
+
                 <TextView
                     android:id="@+id/textView5"
                     android:layout_width="187dp"
@@ -48,15 +50,26 @@
                     android:textSize="27sp" />
 
                 <ImageButton
-                    android:id="@+id/imageButton10"
+                    android:id="@+id/btnSearch"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="15dp"
                     android:background="@android:color/transparent"
                     app:srcCompat="@drawable/search" />
+
+                <EditText
+                    android:id="@+id/editTextSearch"
+                    android:layout_width="320dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:background="@drawable/edittext_border"
+                    android:hint="Search..."
+                    android:imeOptions="actionSearch"
+                    android:padding="10dp"
+                    android:visibility="gone" />
             </LinearLayout>
 
-
+            <!--TabLayout-->
             <com.google.android.material.tabs.TabLayout
                 android:id="@+id/tabLayout"
                 android:layout_width="match_parent"
@@ -88,33 +101,22 @@
                     android:text="THỂ LOẠI" />
             </com.google.android.material.tabs.TabLayout>
         </LinearLayout>
-
-        <!--            <fragment-->
-        <!--                android:id="@+id/navHostFragment"-->
-        <!--                android:name="androidx.navigation.fragment.NavHostFragment"-->
-        <!--                android:layout_width="match_parent"-->
-        <!--                android:layout_height="557dp"-->
-        <!--                app:defaultNavHost="true"-->
-        <!--                app:layout_constraintBottom_toBottomOf="parent"-->
-        <!--                app:layout_constraintTop_toBottomOf="@+id/layoutToolBar"-->
-        <!--                app:navGraph="@navigation/main"-->
-        <!--                />-->
+        <!--//ViewPager-->
         <androidx.viewpager.widget.ViewPager
             android:id="@+id/viewpager"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            />
     </LinearLayout>
-    />
-
+    <!--Navigation-->
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/navigateView"
         android:layout_width="wrap_content"
         android:layout_height="900dp"
         android:layout_gravity="start"
-        app:menu="@menu/navigation_menu"
-        app:itemIconSize="35dp"
-        app:itemIconPadding="20dp"
         app:headerLayout="@layout/layout_navigate_header"
+        app:itemIconPadding="20dp"
+        app:itemIconSize="35dp"
         app:itemTextAppearance="@style/MenuTextAppearance"
-        />
+        app:menu="@menu/navigation_menu" />
 </androidx.drawerlayout.widget.DrawerLayout>
