--- a/app/src/main/res/layout/fragment_sach.xml
+++ b/app/src/main/res/layout/fragment_sach.xml
@@ -49,163 +49,10 @@
 
         </LinearLayout>
 
-        <LinearLayout
+        <ListView
+            android:id="@+id/listBook"
             android:layout_width="match_parent"
-            android:layout_height="641dp"
-            android:layout_marginTop="25dp"
-            android:orientation="vertical">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="96dp"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/imageView1"
-                    android:layout_width="67dp"
-                    android:layout_height="68dp"
-                    android:layout_weight="1"
-                    android:paddingStart="10dp"
-                    android:src="@drawable/books1" />
-
-                <LinearLayout
-                    android:layout_width="283dp"
-                    android:layout_height="68dp"
-                    android:layout_weight="1"
-                    android:gravity="center_vertical"
-                    android:orientation="vertical"
-                    android:paddingStart="15dp">
-
-                    <TextView
-                        android:id="@+id/book_title1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Tên sách"
-                        android:textSize="20sp"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:id="@+id/book_author1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Tên tác giả"
-                        android:textSize="20sp" />
-                </LinearLayout>
-
-                <com.google.android.material.floatingactionbutton.FloatingActionButton
-                    android:id="@+id/imageButton1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_weight="1"
-                    android:paddingLeft="0dp"
-                    app:menu="@menu/book_menu"
-                    android:src="@drawable/baseline_more_vert_24" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="96dp"
-                android:layout_marginTop="15dp"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/imageView6"
-                    android:layout_width="67dp"
-                    android:layout_height="68dp"
-                    android:layout_weight="1"
-                    android:paddingStart="10dp"
-                    android:src="@drawable/books1" />
-
-                <LinearLayout
-                    android:layout_width="283dp"
-                    android:layout_height="68dp"
-                    android:layout_weight="1"
-                    android:gravity="center_vertical"
-                    android:orientation="vertical"
-                    android:paddingStart="15dp">
-
-                    <TextView
-                        android:id="@+id/book_title2"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Tên sách"
-                        android:textSize="20sp"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:id="@+id/book_author2"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Tên tác giả"
-                        android:textSize="20sp" />
-                </LinearLayout>
-
-                <com.google.android.material.floatingactionbutton.FloatingActionButton
-                    android:id="@+id/imageButton2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:src="@drawable/baseline_more_vert_24"
-                    app:menu="@menu/book_menu"
-                    android:textAlignment="center" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="96dp"
-                android:layout_marginTop="15dp"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/imageView7"
-                    android:layout_width="67dp"
-                    android:layout_height="68dp"
-                    android:layout_weight="1"
-                    android:paddingStart="10dp"
-                    android:src="@drawable/books1" />
-
-                <LinearLayout
-                    android:layout_width="283dp"
-                    android:layout_height="68dp"
-                    android:layout_weight="1"
-                    android:gravity="center_vertical"
-                    android:orientation="vertical"
-                    android:paddingStart="15dp">
-
-                    <TextView
-                        android:id="@+id/book_title3"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Tên sách"
-                        android:textSize="20sp"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:id="@+id/book_author3"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Tên tác giả"
-                        android:textSize="20sp" />
-                </LinearLayout>
-
-                <com.google.android.material.floatingactionbutton.FloatingActionButton
-                    android:id="@+id/imageButton3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:paddingLeft="50dp"
-                    app:menu="@menu/book_menu"
-                    android:src="@drawable/baseline_more_vert_24" />
-            </LinearLayout>
-
-
-        </LinearLayout>
-
+            android:layout_height="match_parent"/>
 
     </LinearLayout>
     <com.google.android.material.floatingactionbutton.FloatingActionButton
