--- a/app/src/main/res/layout/activity_add_tacgia.xml
+++ b/app/src/main/res/layout/activity_add_tacgia.xml
@@ -3,112 +3,123 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_marginLeft="20sp"
-    android:layout_marginTop="30sp"
-    android:layout_marginRight="20sp"
-    android:layout_marginBottom="20sp"
-    android:textAlignment="center">
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:gravity="center_horizontal|center_vertical"
         android:orientation="vertical"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="1dp">
+        tools:layout_editor_absoluteX="-6dp"
+        tools:layout_editor_absoluteY="-5dp">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="84dp"
-            android:orientation="horizontal">
+            android:layout_height="92dp"
+            android:background="#20649F"
+            android:backgroundTint="#73B3F3"
+            android:gravity="center_vertical">
 
             <TextView
-                android:id="@+id/textView4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Them tac gia"
+                android:id="@+id/textView2"
+                android:layout_width="412dp"
+                android:layout_height="92dp"
+                android:gravity="center_vertical"
+                android:text="Thêm Tác Giả"
                 android:textAlignment="center"
-                android:textSize="48sp"
-                android:textStyle="bold" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="83dp"
-            android:orientation="horizontal">
-
-            <EditText
-                android:id="@+id/edittentacgia"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:ems="10"
-                android:hint="Ten tac gia"
-                android:textSize="24sp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="193dp"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/imageView9"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                app:srcCompat="@drawable/cute_colorful_playful_japanese_food_circle_logo" />
-
-            <EditText
-                android:id="@+id/editnamsinh"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:ems="10"
-                android:hint="Nam sinh"
-                android:inputType="text"
-                android:textAlignment="center"
-                android:textSize="16sp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="272dp"
-            android:orientation="horizontal">
-
-            <EditText
-                android:id="@+id/edittttacgia"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:ems="10"
-                android:hint="Thong tin tac gia"
-                android:inputType="text"
-                android:textAlignment="center"
-                android:textSize="24sp" />
+                android:textSize="34sp" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal">
+            android:layout_marginTop="20dp"
+            android:orientation="vertical">
 
-            <Button
-                android:id="@+id/btnHuy"
-                android:layout_width="wrap_content"
+            <EditText
+                android:id="@+id/addTacGia"
+                android:layout_width="358dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Huy"
+                android:layout_marginLeft="30dp"
+                android:layout_marginTop="25dp"
+                android:background="@drawable/edittext_border"
+                android:ems="10"
+                android:hint="Tên Tác Giả"
+                android:inputType="text"
+                android:padding="15dp"
+                android:textColorHint="#2E2E2E"
+                android:textSize="24sp" />
+            <LinearLayout
+                android:layout_width="358dp"
+                android:layout_height="120dp"
+                android:layout_marginLeft="30dp"
+                android:layout_marginTop="15dp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/imageViewBook"
+                    android:layout_width="22dp"
+                    android:layout_height="92dp"
+                    android:layout_weight="1"
+                    app:srcCompat="@drawable/books1" />
+
+                <EditText
+                    android:id="@+id/addYearTG"
+                    android:layout_width="160dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/edittext_border"
+                    android:ems="10"
+                    android:hint="Năm sinh: "
+                    android:inputType="number"
+                    android:padding="15dp"
+                    android:textColorHint="#2E2E2E"
+                    android:textSize="24sp" />
+            </LinearLayout>
+
+            <EditText
+                android:id="@+id/addInformationTG"
+                android:layout_width="358dp"
+                android:layout_height="202dp"
+                android:layout_marginLeft="35dp"
+                android:layout_marginTop="15dp"
+                android:background="@drawable/edittext_border"
+                android:ems="10"
+                android:hint="Thông tin sách"
+                android:inputType="text"
+                android:padding="15dp"
+                android:textColorHint="#2E2E2E"
                 android:textSize="24sp" />
 
-            <Button
-                android:id="@+id/btnThem"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Them"
-                android:textSize="24sp" />
+            <LinearLayout
+                android:layout_width="358dp"
+                android:gravity="center_vertical"
+                android:layout_height="75dp"
+                android:layout_marginLeft="35dp"
+                android:layout_marginTop="15dp"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/btnHuyTG"
+                    android:layout_width="179dp"
+                    android:layout_height="68dp"
+                    android:layout_weight="1"
+                    android:text="HỦY"
+                    android:textSize="16sp" />
+
+                <Button
+                    android:id="@+id/btnThemTG"
+                    android:layout_width="179dp"
+                    android:layout_height="68dp"
+                    android:layout_marginLeft="15dp"
+                    android:layout_weight="1"
+                    android:text="ĐỒNG Ý"
+                    android:textSize="16sp" />
+            </LinearLayout>
         </LinearLayout>
+
+
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
