--- a/app/src/main/res/layout/activity_insert_book.xml
+++ b/app/src/main/res/layout/activity_insert_book.xml
@@ -6,8 +6,8 @@
     android:layout_height="match_parent">
 
     <LinearLayout
-        android:layout_width="425dp"
-        android:layout_height="757dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:gravity="center_horizontal|center_vertical"
         android:orientation="vertical"
         tools:layout_editor_absoluteX="-6dp"
