--- a/app/src/main/res/layout/activity_update_the_loai.xml
+++ b/app/src/main/res/layout/activity_update_the_loai.xml
@@ -72,7 +72,7 @@
                     android:layout_height="68dp"
                     android:layout_marginLeft="15dp"
                     android:layout_weight="1"
-                    android:text="THÊM THỂ LOẠI"
+                    android:text="CẬP NHẬT THỂ LOẠI"
                     android:textSize="16sp" />
             </LinearLayout>
         </LinearLayout>
