--- a/app/src/main/res/layout/card_tacgia.xml
+++ b/app/src/main/res/layout/card_tacgia.xml
@@ -1,11 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal"
-
-    >
+    android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -34,42 +30,42 @@
                     android:paddingStart="15dp">
 
                     <TextView
-                        android:id="@+id/TLTitle"
+                        android:id="@+id/titleAuthor"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Thể loại"
+                        android:text="Tên Tác Giả"
                         android:textSize="20sp"
                         android:textStyle="bold" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
                         android:gravity="center_vertical"
+                        android:layout_height="match_parent"
                         android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/textView4"
-                            android:layout_width="221dp"
+                            android:id="@+id/textView9"
+                            android:layout_width="212dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:gravity="center_vertical"
-                            android:text="Số Lượng: "
-                            android:textSize="20sp" />
-
+                            android:textSize="20sp"
+                            android:text="Năm sinh: " />
                         <TextView
-                            android:id="@+id/TLSoluong"
+                            android:id="@+id/yearAuthor"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:gravity="center_vertical"
-                            android:textSize="20sp"
-                            android:textStyle="bold" />
+                            android:textStyle="bold"
+                            android:text=""
+                            android:textSize="20sp" />
+
+
                     </LinearLayout>
 
                 </LinearLayout>
 
                 <ImageButton
-                    android:id="@+id/imageMenuTL"
+                    android:id="@+id/imageMenuTG"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
