--- a/app/src/main/res/layout/fragment_tac_giaa.xml
+++ b/app/src/main/res/layout/fragment_tac_giaa.xml
@@ -1,21 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    tools:context=".TacGiaa"
     android:layout_height="match_parent">
 
-    <!-- Centered LinearLayout with TextView -->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:orientation="vertical"/>
+        android:layout_height="668dp"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_marginTop="20dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="10dp"
+                android:layout_height="45dp"
+                android:layout_weight="1"
+                android:paddingLeft="10dp"
+                android:src="@drawable/people" />
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="5dp"
+                android:layout_height="45dp"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
+                android:text=">"
+                android:textSize="34sp" />
+
+            <TextView
+                android:id="@+id/SLTacGia"
+                android:layout_width="216dp"
+                android:layout_height="45dp"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
+                android:paddingRight="25dp"
+                android:text="0"
+                android:textAlignment="viewEnd"
+                android:textSize="34sp"
+                android:textStyle="bold" />
+
+        </LinearLayout>
+
+        <ListView
+            android:id="@+id/listTacGia"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+    </LinearLayout>
 
     <!-- Floating Action Button at the bottom right corner -->
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab_home"
+        android:id="@+id/fab_home_tacgia"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/add"
