--- a/app/src/main/res/layout/activity_add_tacgia.xml
+++ b/app/src/main/res/layout/activity_add_tacgia.xml
@@ -87,7 +87,7 @@
                 android:layout_marginTop="15dp"
                 android:background="@drawable/edittext_border"
                 android:ems="10"
-                android:hint="Thông tin sách"
+                android:hint="Thông tin tác giả"
                 android:inputType="text"
                 android:padding="15dp"
                 android:textColorHint="#2E2E2E"
